<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inventory.AddInventoryFragment" >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/fragmentAddInventory_Guide"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/fragmentAddInventory_GuideEnd" />

    <TextView
        android:id="@+id/tvCreated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/tvCreated_text"
        app:layout_constraintEnd_toStartOf="@+id/gdEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gdStart"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edCreated"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/edCreated_contentDescription"
        android:focusable="false"
        android:inputType="date"
        android:maxLines="1"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvCreated"
        app:layout_constraintEnd_toEndOf="@id/gdEnd"
        app:layout_constraintStart_toStartOf="@+id/barrier"
        tools:ignore="EditableContentDescCheck" />

    <TextView
        android:id="@+id/tvActivated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/tvActivated_text"
        app:layout_constraintStart_toStartOf="@+id/gdStart"
        app:layout_constraintTop_toBottomOf="@+id/tvCreated" />

    <EditText
        android:id="@+id/edActivated"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/edActivated_contentDescription"
        android:focusable="false"
        android:inputType="date"
        android:maxLines="1"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvActivated"
        app:layout_constraintEnd_toEndOf="@id/gdEnd"
        app:layout_constraintStart_toStartOf="@+id/barrier"
        tools:ignore="EditableContentDescCheck" />
    <TextView
        android:id="@+id/tvEnded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/tvEnded_text"
        app:layout_constraintStart_toStartOf="@+id/gdStart"
        app:layout_constraintTop_toBottomOf="@+id/tvActivated" />

    <EditText
        android:id="@+id/edEnded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/edEnded_contentDescription"
        android:focusable="false"
        android:inputType="date"
        android:maxLines="1"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvEnded"
        app:layout_constraintEnd_toEndOf="@id/gdEnd"
        app:layout_constraintStart_toStartOf="@+id/barrier"
        tools:ignore="EditableContentDescCheck" />
    <TextView
        android:id="@+id/tvEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/tvEdit_text"
        app:layout_constraintStart_toStartOf="@+id/gdStart"
        app:layout_constraintTop_toBottomOf="@+id/tvEnded" />


    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btOk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gdEnd"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/gdStart"
        app:layout_constraintTop_toBottomOf="@+id/tvEdit"
        app:layout_constraintVertical_bias="0.75" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="tvCreated,tvActivated,tvEnded,tvEdit"/>

    <Switch
        android:id="@+id/swEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvEdit"
        app:layout_constraintEnd_toStartOf="@+id/gdEnd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/barrier" />

</androidx.constraintlayout.widget.ConstraintLayout>