<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity" >

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvLogin_login"
        android:layout_marginTop="@dimen/tvLogin_marginTop"
        android:textSize="@dimen/login_tvLogin_textSize"
        android:gravity="center"
        android:fontFamily="@font/officialbook"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/login_tilUser_marginTop"
        android:id="@+id/tilEmail"
        style="@style/InventoryTextHintApparience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tieUser" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/login_tilPassword_marginTop"
        style="@style/InventoryTextHintApparience"
        android:id="@+id/tilPassword"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/tiePassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/chkRemember" />

        <Button
            android:id="@+id/btSignUp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:text="@string/btSignUp_text" />
    </LinearLayout>

    <Button
        android:id="@+id/btSignIn"
        android:layout_width="@dimen/login_btSignIn_layout_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/btSignIn_text" />

    <ProgressBar
        android:indeterminate="true"
        android:visibility="invisible"
        style="?android:progressBarStyleHorizontal"
        android:id="@+id/progress_horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

    <TextView
        android:id="@+id/tvOtherLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:textStyle="bold"
        android:paddingBottom="@dimen/tvOtherLogin_paddingBotom"
        android:gravity="bottom|center_horizontal"
        android:text="@string/tvLogin_text" />

    <LinearLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imgGoogle"
            android:layout_width="99dp"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_google"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/imgFacebook"
            android:layout_width="107dp"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_facebook_logo_portada"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

</LinearLayout>