<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignUpActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp">

    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <TextView
        android:id="@+id/tvTitleSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/officialbook"
        android:text="@string/tvTitleSignUp"
        android:textSize="@dimen/signup_tvtitle_textsize"
        app:layout_constraintEnd_toStartOf="@+id/gdEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUser"
        style="@style/InventoryTextHintApparience.SignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/gdEnd"
        app:layout_constraintStart_toStartOf="@id/gdStart"
        app:layout_constraintTop_toBottomOf="@id/tvTitleSignUp"
        app:startIconDrawable="@drawable/ic_tiluser_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/SignUp_tieUser_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/InventoryTextHintApparience.SignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/tilPassword"
        app:layout_constraintEnd_toStartOf="@id/gdEnd"
        app:layout_constraintStart_toStartOf="@id/gdStart"
        app:layout_constraintTop_toBottomOf="@id/tilUser"
        app:startIconDrawable="@drawable/ic_action_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/SignUp_tieEmail_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/InventoryTextHintApparience.SignUp"
        android:layout_width="0dp"
        app:endIconMode="password_toggle"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@id/gdEnd"
        app:layout_constraintStart_toStartOf="@id/gdStart"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:startIconDrawable="@drawable/ic_action_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/SignUp_tiePassword_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmPassword"
        style="@style/InventoryTextHintApparience.SignUp"
        android:layout_width="0dp"
        app:endIconMode="password_toggle"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@id/gdEnd"
        app:layout_constraintStart_toStartOf="@id/gdStart"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:startIconDrawable="@drawable/ic_action_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/SignUp_tieConfirmPassword_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/btSignUp_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gdEnd"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/gdStart"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>